General fixed. Added ToDoList using useReducer, some new functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "src/*": ["*"],
-      "pages/*": ["pages/*"],
-      "components/*": ["components/*"]
+      "src/*": ["src/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
