--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "jest": "^28.1.0",
+    "random-url": "^1.0.0",
+    "random-word-slugs": "^0.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
