--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.6.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +12,7 @@
     "@types/react-dom": "^18.0.4",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
+    "graphql-tag": "^2.12.6",
     "jest": "^28.1.0",
     "random-url": "^1.0.0",
     "random-word-slugs": "^0.1.6",
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@apollo/client": "^3.6.4",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "autoprefixer": "^10.4.7",
